[package]
name = "selfdriving-car"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", features = [
  "serialize",
  "bevy_ui",
  "x11",
], default-features = false }
rand = "0.8.5"
ron = "0.8.1"

[dev-dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking"]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
